<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:layout_marginTop="@dimen/textsmall"
    android:orientation="vertical">

   <androidx.cardview.widget.CardView
       android:id="@+id/card_1"
       android:layout_gravity="center"
       android:layout_width="300dp"
       android:layout_height="wrap_content"
       app:cardCornerRadius="10dp"
       >
<ImageView
    android:id="@+id/img_hotel1"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:src="@drawable/hotel3"
    android:scaleType="centerCrop"
    />
       <ImageView
           android:id="@+id/img_2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="360dp"
           android:scaleType="centerCrop"
           android:layout_marginTop="10dp"
           android:src="@drawable/ic_bookmark_border_black_24dp"
          />
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <androidx.appcompat.widget.AppCompatImageView
               android:id="@+id/img_1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_star_black_24dp"
               android:layout_marginTop="100dp"
               android:layout_marginStart="8dp"/>
           <TextView
               android:id="@+id/tv_3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tv_4_5_21_ratings"
               android:textColor="@color/colorWhite"
               android:layout_marginTop="100dp"
               android:layout_marginStart="4dp"/>

       </LinearLayout>
       <Button
           android:id="@+id/btn_1"
           android:layout_width="wrap_content"
           android:layout_height="@dimen/btn_size1"
           android:text="@string/tv_99_day"
           android:background="@drawable/btn_gradient"
           android:textColor="@color/colorWhite"
           android:layout_marginTop="80dp"
           android:layout_marginStart="340dp"
           android:textSize="@dimen/text_middle"/>


   </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="The Westeen"
            android:layout_marginStart="16dp"
            android:textColor="@color/cardview_dark_background"
            android:textSize="@dimen/text_title"
            android:fontFamily="sans-serif-black"/>
        <TextView
            android:id="@+id/tv_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get 50% OFF"
            android:textColor="@color/red"
            android:layout_marginStart="110dp"
            android:textSize="@dimen/textsmall"/>


    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tv_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gulshan Circle2,Dhaka"
        android:textSize="@dimen/text_middle"
        android:layout_marginStart="12dp"/>
    <TextView
        android:id="@+id/tv_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:textSize="@dimen/textsmall"
        android:text="@string/tv_free_wifi_swimming"/>

</LinearLayout>




</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>