<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_peekHeight="40dp"
    app:behavior_hideable="false" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_fifty"
        android:layout_marginTop="@dimen/five"
     >
        <TextView
            android:id="@+id/tv_22"
            android:layout_width="@dimen/text_fifty"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_marginTop="@dimen/textsmall"
            android:layout_marginStart="@dimen/text_title"
            android:textColor="@color/themecolor"/>
        <TextView
            android:layout_toEndOf="@id/tv_22"
            android:id="@+id/tv_23"
            android:layout_width="@dimen/margin_hundred5"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixty"
            android:layout_marginTop="@dimen/five"
            android:textSize="@dimen/text_title"
            android:text="Filter"
            android:textAlignment="center"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_toEndOf="@id/tv_23"
            android:id="@+id/tv_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:layout_marginStart="@dimen/textsmall"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/textsmall"
            android:textColor="@color/themecolor"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_sort_by"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_title"
        android:fontFamily="sans-serif-black"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/textsmall"
        android:layout_marginRight="@dimen/textsmall"
        android:layout_marginTop="@dimen/textsmall"
        android:background="@drawable/textview_shape"
        android:paddingLeft="@dimen/text_middle"
        android:paddingTop="@dimen/textsmall">

        <TextView
            android:id="@+id/tv_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="Price"
            android:textSize="@dimen/text_middle" />
        <TextView
            android:id="@+id/tv_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="$$>$$"
            android:textSize="@dimen/text_middle"
            android:layout_marginStart="@dimen/text_fifty"/>
        <ImageView
            android:id="@+id/img_3"
            android:layout_width="@dimen/margin_hundred"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_hundred5"

            android:src="@drawable/ic_arrow_drop_down_black_24dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_title"
        android:text="@string/tv_rating"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_title"
        android:fontFamily="sans-serif-black"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textsmall"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_shape"
            android:layout_marginStart="@dimen/five">

            <TextView
                android:id="@+id/tv_28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/five"
                android:textAlignment="center"
                android:text="NONE" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_shape"
            android:layout_marginStart="@dimen/five">

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
               android:textAlignment="center"
                android:paddingLeft="@dimen/textsmall"
                android:padding="@dimen/five"
                android:text="1" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingTop="@dimen/five"
                android:src="@drawable/ic_star_black_24dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_shape"
            android:layout_marginStart="@dimen/five">

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingLeft="@dimen/textsmall"
                android:padding="@dimen/five"
                android:text="2" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingTop="@dimen/five"
                android:src="@drawable/ic_star_black_24dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_shape"
            android:layout_marginStart="@dimen/five">

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingLeft="@dimen/textsmall"
                android:padding="@dimen/five"
                android:text="3" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingTop="@dimen/five"
                android:src="@drawable/ic_star_black_24dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_shape"
            android:layout_marginStart="@dimen/five"
            android:backgroundTint="@color/themecolor">

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingLeft="@dimen/textsmall"
                android:padding="@dimen/five"
                android:text="4" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingTop="@dimen/five"
                android:src="@drawable/ic_star_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_shape"
            android:layout_marginStart="@dimen/five">

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingLeft="@dimen/textsmall"
                android:padding="@dimen/five"
                android:text="5" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingTop="@dimen/five"
                android:src="@drawable/ic_star_black_24dp" />

        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PRICE RANGE"
        android:layout_marginTop="@dimen/text_title"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_title"
        android:fontFamily="sans-serif-black"/>

    <ImageView
        android:id="@+id/iv_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_start2"
        android:src="@drawable/bar1c" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_90_350"
        android:layout_marginStart="@dimen/textsmall"
        android:textSize="@dimen/text_middle"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Average-250"
        android:layout_marginStart="@dimen/margin_start"
        android:textSize="@dimen/text_middle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_2"
            android:layout_width="300dp"
            android:layout_height="@dimen/text_fifty"
            android:layout_marginStart="@dimen/textsmall"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_gradient"
            android:text="@string/btn_filter_now"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_middle" />

        <ImageButton
            android:id="@+id/btn_3"
            android:layout_width="@dimen/eighty"
            android:layout_height="@dimen/text_fifty"
            android:layout_marginStart="@dimen/textsmall"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_gradient"
            android:src="@drawable/ic_map_black_24dp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_middle" />

    </LinearLayout>
</LinearLayout>


</LinearLayout>
</androidx.core.widget.NestedScrollView>